# library-of-life

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt  version.py
docs/: conf.py  index.rst  library_of_life.literature.rst  library_of_life.maps.rst  library_of_life.occurrence.rst  library_of_life.species.rst  library_of_life.utils.rst  library_of_life.validator.rst  library_of_life.vocabulary.rst  requirements.txt
docs/_build/doctrees/: environment.pickle  index.doctree  library_of_life.doctree  library_of_life.literature.doctree  library_of_life.maps.doctree  library_of_life.occurrence.doctree  library_of_life.registry.doctree  library_of_life.species.doctree  library_of_life.utils.doctree  library_of_life.validator.doctree  library_of_life.vocabulary.doctree  modules.doctree
library_of_life/: gbif_root.py
library_of_life/literature/: literature.py
library_of_life/maps/: maps.py
library_of_life/occurrence/: country_usages.py  download_formats.py  download_stats.py  downloads.py  gadm_regions.py  inventories.py  metrics.py  organization_usages.py  search.py  single_occurrence.py
library_of_life/registry/: collections.py  datasets.py  derived_datasets.py  institutions.py  institutions_and_collections.py  networks.py  participant_nodes.py  publishing_orgs.py  tech_installations.py
library_of_life/species/: name_parser.py  name_search.py  name_usage.py
library_of_life/utils/: http_client.py
library_of_life/validator/: validation_resource.py
library_of_life/vocabulary/: concepts.py  languages.py  tags.py  vocabularies.py
(+57 files in other folders)
